--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f3cf441e-91b3-4214-bd26-748c45962ee6"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
